Modified texts in first section

--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
             <header class="header-container" id="index">
                 <div class="container text-center">
                     <div class="badge bg-gradient-primary-to-secondary text-white mb-2">
-                        <div class="text-uppercase">SR BACKEND DEVELOPER &middot; ARTIFICIAL INTELLIGENCE &middot; ETHICAL HACKING</div>
-                    </div>
+                        <span class="d-block text-wrap text-center">
+                            SR BACKEND DEVELOPER · ARTIFICIAL INTELLIGENCE · ETHICAL HACKING
+                        </span>
+                    </div>                    
                     <h1 class="display-3 fw-bolder mb-4"><span class="text-gradient d-inline">Federico Nicolás Melo</span></h1>
                     <div class="d-flex justify-content-center gap-3">
                         <a class="btn btn-primary btn-lg px-5 py-3 fs-6 fw-bolder" href="#resume">Resumen</a>
