--- a/index.html
+++ b/index.html
@@ -429,6 +429,17 @@
                                         </div>
                                         <div class="row row-cols-1 row-cols-md-3 mb-4">
                                             <div class="col mb-4 mb-md-0">
+                                                <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Python</div>
+                                            </div>
+                                            <div class="col mb-4 mb-md-0">
+                                                <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Numpy / Pandas</div>
+                                            </div>
+                                            <div class="col">
+                                                <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Matplotlib / Seaborn</div>
+                                            </div>
+                                        </div>
+                                        <div class="row row-cols-1 row-cols-md-3 mb-4">
+                                            <div class="col mb-4 mb-md-0">
                                                 <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Docker</div>
                                             </div>
                                             <div class="col mb-4 mb-md-0">
