--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
             </header>                       
             <!-- About Section-->
-            <section class="bg-light pt-3 py-5" id="about">
+            <section class="pt-3 py-5" id="about">
                 <div class="container px-5">
                     <div class="row gx-5 justify-content-center">
                         <div class="col-xxl-8">
@@ -122,10 +122,10 @@
                                 <h2 class="text-primary fw-bolder mb-0">Experiencia</h2>
                                 <!-- Download resume button-->
                                 <!-- Note: Set the link href target to a PDF file within your project-->
-                                <a class="btn btn-primary px-4 py-3" href="assets/FedericoMeloCV.pdf" target="_blank">
-                                    <div class="d-inline-block bi bi-download me-2"></div>
-                                    Descargar CV
-                                </a>
+                                <a class="btn btn-primary px-4 py-3 btn-download" href="assets/FedericoMeloCV.pdf" target="_blank">
+                                    <div class="d-inline-block bi bi-download px-1"></div>
+                                    <span class="btn-text">Descargar CV</span>
+                                </a>                                
                             </div>
                             <div class="card shadow border-0 rounded-4 mb-5">
                                 <div class="card-body p-5">
@@ -479,7 +479,7 @@
                     </div>
                 </div>
             </section>
-            <section class="bg-light py-5" id="contact">
+            <section class="py-5" id="contact">
                 <div class="container px-5">
                     <!-- Contact form-->
                     <div class="bg-light rounded-4 py-5 px-4 px-md-5">
