--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
             <section class="py-5" id="contact">
                 <div class="container px-5">
                     <!-- Contact form-->
-                    <div class="bg-light rounded-4 py-5 px-4 px-md-5">
+                    <div class="rounded-4 py-5 px-4 px-md-5">
                         <div class="text-center mb-5">
                             <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 mb-3"><i class="bi bi-envelope"></i></div>
                             <h1 class="fw-bolder">Ponte en contacto</h1>
@@ -553,7 +553,7 @@
             <i class="bi bi-arrow-up text-gradient"></i>
         </button>
         <!-- Footer-->
-        <footer class="bg-white py-4 mt-auto">
+        <footer class="bg-white py-4 mt-auto footer-custom">
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                     <div class="col-auto"><div class="small m-0">Desarrollado por Federico Nicolás Melo - Copyright &copy; 2025</div></div>
@@ -564,7 +564,7 @@
                     </div>
                 </div>
             </div>
-        </footer>     
+        </footer>            
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
