--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                                         </div>
                                         <div class="col-lg-8">
                                             <div>
-                                                <p><strong>Técnico en Data Science</strong></p>
+                                                <p><strong>Técnico Superior en Data Science</strong></p>
                                                 <p><strong>Duración: </strong><span class="text-muted"><strong> 2 años</strong></span></p>
                                                 El Técnico Superior en Data Science está capacitado para recopilar, procesar y analizar grandes volúmenes de datos, aplicando herramientas como Python, SQL y machine learning. Su formación le permite extraer información valiosa, generar modelos predictivos y transformar datos en conocimiento útil para la toma de decisiones en diversas industrias.
                                             </div>
