Update title and role descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="container text-center">
                     <div class="badge bg-gradient-primary-to-secondary text-white mb-2">
                         <span class="d-block text-wrap text-center">
-                            SR BACKEND DEVELOPER · CONSULTORIA - ARTIFICIAL INTELLIGENCE · ETHICAL HACKING
+                            SERNIOR BACKEND DEVELOPER · CONSULTORÍA - ARTIFICIAL INTELLIGENCE
                         </span>
                     </div>                    
                     <h1 class="display-3 fw-bolder mb-4"><span class="text-gradient d-inline">Federico Nicolás Melo</span></h1>
@@ -72,7 +72,7 @@
                             <!-- Sección alineada a la izquierda -->
                             <div class="text-start">
                                 <h4 class="fw-bold text-gradient">
-                                    Sr. Backend Developer especializado en Java y Spring Boot
+                                    Senior Backend Developer especializado en Java y Spring Boot
                                 </h4>
 
                                 <p>
