--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="container text-center">
                     <div class="badge bg-gradient-primary-to-secondary text-white mb-2">
                         <span class="d-block text-wrap text-center">
-                            SERNIOR BACKEND DEVELOPER · CONSULTORÍA - ARTIFICIAL INTELLIGENCE
+                            SENIOR BACKEND DEVELOPER · CONSULTORÍA - ARTIFICIAL INTELLIGENCE
                         </span>
                     </div>                    
                     <h1 class="display-3 fw-bolder mb-4"><span class="text-gradient d-inline">Federico Nicolás Melo</span></h1>
